export class Student {
  classname: string;


  constructor(classname: string) {
    this.classname = classname;
  }
}
