export class Teacher extends Person {

  constructor(firstName: string, lastName: string, password: string) {
    super(firstName, lastName, password)
  }
}
